Issue #1349: Do not wrap machine name previews

--- a/core/modules/field/css/field.css
+++ b/core/modules/field/css/field.css
@@ -3,6 +3,16 @@
 .field .field-label {
   font-weight: bold;
 }
+
+/**
+ * Do not wrap machine name preview text.
+ *
+ * @see https://github.com/backdrop/backdrop-issues/issues/1349
+ */
+.field-suffix.machine-name-preview {
+  white-space: nowrap;
+}
+
 /**
  * Clear fields with inline labels, as the label and field items are floated.
  *
